Update Titanic Project Basic Task.ipynb

--- a/Titanic Project Basic Task.ipynb
+++ b/Titanic Project Basic Task.ipynb
@@ -455,7 +455,7 @@
     }
    ],
    "source": [
-    "eldest=list(df1[df1['Age']==min(df1['Age'])]['Name'])\n",
+    "eldest=list(df1[df1['Age']==max(df1['Age'])]['Name'])\n",
     "print(\"Eldest person in titanic was: \",eldest[0])"
    ]
   },
